equipment spacing fix
reduced margin size of equipment tab

--- a/newMain.css
+++ b/newMain.css
@@ -437,3 +437,6 @@ body {
   .ww-box{
     margin-bottom:1em;
   }
+  #equipmentdetails{
+    margin: -10%;
+  }
